--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/mdx": "4.3.0",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.4.1",
+    "@rollup/rollup-win32-x64-msvc": "^4.45.1",
     "astro": "5.10.1",
     "typescript": "5.8.3"
   },
